[rukmal] finished optimal sector section, started working on benchmark stuff now

--- a/references.bib
+++ b/references.bib
@@ -126,6 +126,14 @@
     address = {New York}
 }
 
+@misc{GoogleResearch2019GoogleColaboratory,
+    title = {{Google Research Colaboratory}},
+    year = {2019},
+    author = {{Google Research}},
+    url = {http://colab.research.google.com},
+    address = {Mountain View}
+}
+
 @misc{FTSEInternationalLimited2019IndustryRussell,
     title = {{Industry Classification Benchmark (ICB) | FTSE Russell}},
     year = {2019},
@@ -151,6 +159,14 @@
     year = {2019},
     author = {{Fidelity Investments}},
     url = {https://www.fidelity.com/learning-center/trading-investing/markets-sectors/know-your-sectors-and-industries}
+}
+
+@misc{Weerawarana2019LearnedAnalytics,
+    title = {{Learned Sector Analytics}},
+    year = {2019},
+    author = {Weerawarana, Rukmal and Zhu, Yiyi and He, Yuzhen},
+    url = {https://colab.research.google.com/drive/1MvcyrTJW05tH09-bpFY46o6b2KWO_rm1},
+    address = {New York}
 }
 
 @techreport{2018NASDAQ-100METHODOLOGY,
