--- a/resources/appendix.tex
+++ b/resources/appendix.tex
@@ -15,9 +15,63 @@
 
 \pagestyle{appendix}
 
-\chapter{Some Appendix}
+\chapter{Backtest Visualization} \label{appendix:backtest_visualization}
 
-Appendix stuff goes here.
+
+\section*{SETF Restructuring Turnover}
+
+See Figure~\ref{fig:appendix_backtest:setf_restructuring_turnover} on Page~\pageref{fig:appendix_backtest:setf_restructuring_turnover}.
+
+
+\section*{Portfolio Rebalancing Turnover}
+
+See Figure~\ref{fig:appendix_backtest:portfolio_rebal_turnover} on Page~\pageref{fig:appendix_backtest:portfolio_rebal_turnover}.
+
+
+\section*{Portfolio Return}
+
+See Figure~\ref{fig:appendix_backtest:portfolio_return} on Page~\pageref{fig:appendix_backtest:portfolio_return}.
+
+\section*{Sharpe Ratio}
+
+See Figure~\ref{fig:appendix_backtest:sharpe_ratio} on Page~\pageref{fig:appendix_backtest:sharpe_ratio}.
+
+
+\newpage
+\begin{sidewaysfigure}
+    \centering
+    \includegraphics[width=\linewidth]{images/all_setf_restructuring_turnover.png}
+    \caption{Cumulative SETF restructuring turnover for 60 candidate learned sector universes.}
+    \label{fig:appendix_backtest:setf_restructuring_turnover}
+    \addcontentsline{toc}{section}{SETF Restructuring Turnover}
+\end{sidewaysfigure}
+
+\newpage
+\begin{sidewaysfigure}
+    \centering
+    \includegraphics[width=\linewidth]{images/all_portfolio_rebalancing_turnover.png}
+    \caption{Cumulative portfolio rebalancing turnover for 60 candidate learned sector universes.}
+    \label{fig:appendix_backtest:portfolio_rebal_turnover}
+    \addcontentsline{toc}{section}{Portfolio Rebalancing Turnover}
+\end{sidewaysfigure}
+
+\newpage
+\begin{sidewaysfigure}
+    \centering
+    \includegraphics[width=\linewidth]{images/all_portfolio_return.png}
+    \caption{Portfolio return for 60 candidate learned sector universes.}
+    \label{fig:appendix_backtest:portfolio_return}
+    \addcontentsline{toc}{section}{Portfolio Return}
+\end{sidewaysfigure}
+
+\newpage
+\begin{sidewaysfigure}
+    \centering
+    \includegraphics[width=\linewidth]{images/all_sharpe_ratio.png}
+    \caption{Rolling Sharpe Ratio for 60 candidate learned sector universes.}
+    \label{fig:appendix_backtest:sharpe_ratio}
+    \addcontentsline{toc}{section}{Sharpe Ratio}
+\end{sidewaysfigure}
 
 
 \chapter{Another Appendix}
