--- a/resources/glossary.tex
+++ b/resources/glossary.tex
@@ -36,3 +36,15 @@
     name=Benchmark Universe,
     description={For this project, the benchmark sector classification unvierse is the \textit{GICS S\&P 500 Classification}}
 }
+
+\newglossaryentry{setf_restructuring}
+{
+    name=SETF Restructuring Turnover,
+    description={The dollar-value change of component asset turnover incurred when a synthetic ETF is restructured}
+}
+
+\newglossaryentry{portfolio_rebalancing}
+{
+    name=Portfolio Rebalancing Turnover,
+    description={The dollar-value change of constituent SETF turnover incurred when a portfolio of SETFs is rebalanced}
+}
