--- a/resources/header.tex
+++ b/resources/header.tex
@@ -15,17 +15,23 @@
 \usepackage{longtable} % Long tables
 \usepackage{parskip} % Custom skips
 \usepackage{relsize} % Relative sizing
+\usepackage{rotating} % Rotated images
 \usepackage{wrapfig} % Text wrapping around figures
 
 \allowdisplaybreaks[1]
 \setlength{\footnotemargin}{1em}
-% \captionsetup{labelformat = empty}
 \footskip 35pt
+
+% Caption Setup
+%==============
+% See: http://ftp.isu.edu.tw/pub/Unix/CTAN/macros/latex/contrib/caption/caption.pdf
+\captionsetup{labelfont=bf, textfont=it}
+
 
 % Section Numbering Setup
 %========================
 % Numbering depth
-\setcounter{secnumdepth}{0}
+% \setcounter{secnumdepth}{0}
 
 % Bibliography Setup
 %===================
