--- a/resources/title_page.tex
+++ b/resources/title_page.tex
@@ -32,7 +32,7 @@
 
 \HRule \\[0.9cm]
 {\huge \bfseries Learned Sectors}\\[0.4cm] % Title of your document
-\textsc{\Large A Fundamentals-Driven Asset Sector Reclassification Project}\\[0.5cm] % Minor heading such as course title
+\textsc{\Large A Fundamentals-Driven Sector Reclassification Project}\\[0.5cm] % Minor heading such as course title
 \HRule \\[1.5cm]
 
 %----------------------------------------------------------------------------------------
