--- a/sections/benchmark_comparison.tex
+++ b/sections/benchmark_comparison.tex
@@ -1,8 +1,31 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-    
+
 \chapter{Benchmark Comparison}
+
+We now have a data-driven methodology for deriving learned sector universes (addressing RG-1), and have developed a objetive criteria-driven ranking methodology to compare the learned sector universes against each other, addressing RG-2. The final step is to evaluate our risk-adjusted return optimal learned sector universe against the benchmark classification. Thus, this section addresses the third and final research goal, RG-3 (see Section~\ref{research_goals:specific_research_goals}).
+
+\begin{table}[h!]
+    \centering
+    \begin{tabular}{| c | c |}
+        \hline
+        &  \\
+        RG-3 & Evaluate our risk-adjusted return optimal sector universe against the benchmark. \\
+        & \\
+        \hline
+    \end{tabular}
+\end{table}
+
+% TEMPORARY
+
+
+Analyzing each of the new learned sectors in turn, it is clear that beyond the large sectors \textit{Alpha} and \textit{Golf}, a large majority of the remaining sectors are extremely small with respect to their numbers of component assets. Despite this however, the two large (major) sectors - as well as a selection of the smaller (i.e. minor) sectors - have an extremely high dispersion rate relative to the benchmark. That is, there doesn't seem to be a high level of congruence between the old and new sector assignments.
+
+Both major learned sectors \textit{Alpha} and \textit{Golf} retain a large number of assets as their components. Particularly, it can be observed that learned sector \text{Alpha} contains a majority of the benchmark \textit{Financials} sector, and the benchmark \textit{Utilities} sector. Given that these sector assignments are derived from fundamentals data, this is a particularly interesting result, as both \textit{Financials} and \textit{Utilities} have become extremely risk-averse businesses over the last decade; \textit{Financials} due to the Great Recession of 2008, and \textit{Utilities} due to extensive capital damange incurred by the increased severity and number of Natural Disasters. This grouping indicates that the capital structure of these businesses are also becoming increasingly similar.
+
+Considering learned sector \textit{Golf}, it seems to be a mini-index within the oringal sector universe. From a component count perspective, it ingests a large amount of the benchmark \textit{Consumer Discretionary} and \textit{Consumer Staples} industries, as well as large swaths of industries that form the backbone of the US Economy as a whole; namely, the \textit{Information Techonology}, \textit{Industrials}, and \textit{Real Estate} sectors.
+% END TEMP
 
 In this chapter we make comparison between our optimal sector universe of maximum Sharpe Ratio and benchmark sector universe. We compare each of the performance metric of both sector universes and demonstrate which sector universe has better risk-adjusted return.  
 
