--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -30,7 +30,7 @@ In the United States today, there are myriad sectorization taxonomies (hereafter
     \centering
     \vspace{\wrapfigadjustment}
     \fbox{
-    \includegraphics[width=\linewidth]{images/msci_gics_breakdown.png}
+    \includegraphics[width=.9\linewidth]{images/msci_gics_breakdown.png}
     }
     \caption{Overview of the GICS Sector Universe}
     \label{fig:introduction:gics_breakdown}
@@ -64,7 +64,7 @@ Similar to the GICS, ICB too utilizes three main criteria when classifying compa
     \centering
     \vspace{\wrapfigadjustment}
     \fbox{
-    \includegraphics[width=\linewidth]{images/ftse_icb_breakdown.png}
+    \includegraphics[width=.9\linewidth]{images/ftse_icb_breakdown.png}
     }
     \caption{Overview of the MSCI Sector Universe}
     \label{fig:introduction:icb_breakdown}
