--- a/sections/hierarchical_clustering_model.tex
+++ b/sections/hierarchical_clustering_model.tex
@@ -12,6 +12,17 @@
 
 In this chapter, we are going to talk about how we use Hierarchical Clustering to classify companies into new sectors. We are going to talk about 2 important variables. The first is the linkage method and the second is the number of new sectors we want. After that, we'll show how we visiualize the new sectors.
 
+\begin{table}[h!]
+    \centering
+    \begin{tabular}{| c | c |}
+        \hline
+        &  \\
+        RG-1 & Utilize data-driven algorithms to derive a truly objective classification heuristic. \\
+        & \\
+        \hline
+    \end{tabular}
+\end{table}
+
 \section{HCA Description}
 
 Hierarchical clustering is an algorithm that groups similar objects into groups called clusters. The endpoint is a set of clusters, where each cluster is distinct from each other cluster, and the objects within each cluster are broadly similar to each other. It builds a tree and we can get whatever number of groups we want depending on how we cut it horizontally. Below is a simple example.
