[rukmal] finished benchmark comparison; working on conclusion now

--- a/resources/appendix.tex
+++ b/resources/appendix.tex
@@ -74,8 +74,34 @@ See Figure~\ref{fig:appendix_backtest:sharpe_ratio} on Page~\pageref{fig:appendi
 \end{sidewaysfigure}
 
 
-\chapter{Another Appendix}
+\chapter{Backtest Portfolio Weights} \label{appendix:portfolio_weights}
 
-More appendix stuff goes here.
+\section*{Optimal Learned Sector Universe Portfolio}
+
+See Figure~\ref{fig:appendix_weights:sharpe_optimal} on Page~\pageref{fig:appendix_weights:sharpe_optimal}.
+
+
+\section*{Benchmark Sector Universe Portfolio}
+
+See Figure~\ref{fig:appendix_weights:benchmark} on Page~\pageref{fig:appendix_weights:benchmark}.
+
+\newpage
+\begin{sidewaysfigure}
+    \centering
+    \includegraphics[width=\linewidth]{images/complete_17_sector_assignments.png}
+    \caption{Risk-adjusted return optimal learned sector universe portfolio assignment weights.}
+    \label{fig:appendix_weights:sharpe_optimal}
+    \addcontentsline{toc}{section}{Optimal Learned Sector Universe Portfolio}
+\end{sidewaysfigure}
+
+
+\newpage
+\begin{sidewaysfigure}
+    \centering
+    \includegraphics[width=\linewidth]{images/sp500_sector_assignments.png}
+    \caption{Benchmark sector universe (i.e. \textit{GICS S\&P 500 Classification}) portfolio assignment weights.}
+    \label{fig:appendix_weights:benchmark}
+    \addcontentsline{toc}{section}{Benchmark Sector Universe Portfolio}
+\end{sidewaysfigure}
 
 \end{document}
