--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -4,6 +4,39 @@
     
 \chapter{Conclusion}
     
-\textbf{Hello, world!}
+In this section, we will reiterate our main findings, and relate them back to our specific research goals (initially outlined in Section~\ref{research_goals:specific_research_goals}) and our thesis statement.
+
+\section{Specific Research Goals}
+
+\subsection{Research Goal 1}
+
+\begin{table}[h!]
+    \centering
+    \begin{tabular}{| c | c |}
+        \hline
+        &  \\
+        RG-1 & Utilize data-driven algorithms to derive a truly objective classification heuristic. \\
+        & \\
+        \hline
+    \end{tabular}
+\end{table}
+
+In the first portion of the report, we address this specific research goal by outlining our target data sources (see Section~\ref{feature_selection}), the benchmark we plan to use for comparison, and how our specifically selected fields from our data sources relate and reinforce our research objective. Following this, we recognized that in order to maintain the level of objectivity enforced by RG-1, we would have to use an unsupervised learning method to determine our candidate learned sector universes. To this end, we conducted a survey of potential methodologies and identified Hierarchical Clustering as our target methodology in Section~\ref{unsupervised_learning_methods_survey}. In Section~\ref{hierarchical_clustering_model}, we parameterized our HCA heuristic, and identified our search space. We then computed a set of candidate learned sector universes, fully addressing RG-1.
+
+\subsection{Research Goal 2}
+
+\begin{table}[h!]
+    \centering
+    \begin{tabular}{| c | c |}
+        \hline
+        &  \\
+        RG-2 & Rank candidate sector universes against each other using entirely objective criteria. \\
+        & \\
+        \hline
+    \end{tabular}
+\end{table}
+
+The second portion of the report was dedicated to addressing RG-2. This process begain in Section~\ref{candidate_universe_ranking}
+
 
 \end{document}
