--- a/sections/hierarchical_clustering_model.tex
+++ b/sections/hierarchical_clustering_model.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
 
-\chapter{Hierarchical Clustering Model}
+\chapter{Hierarchical Clustering Model} \label{hierarchical_clustering_model}
 
 \begin{itemize}
     \item What are important variables in the model?
