--- a/sections/unsupervised_learning_methods_survey.tex
+++ b/sections/unsupervised_learning_methods_survey.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
     
-\chapter{Unsupervised Learning Methods Survey}
+\chapter{Unsupervised Learning Methods Survey} \label{unsupervised_learning_methods_survey}
     
 \textbf{Hello, world!}
 
