--- a/sections/feature_selection.tex
+++ b/sections/feature_selection.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
 
-\chapter{Feature Selection}
+\chapter{Feature Selection} \ref{feature_selection}
   
 \begin{itemize}
     \item Where do we get our data?
